refactor: change move history to linkedlist and openjml annotations